Mobile Menu: fixed bug overflow-x

--- a/src/assets/sass/customs/_reboot.scss
+++ b/src/assets/sass/customs/_reboot.scss
@@ -105,6 +105,14 @@ select {
   -moz-appearance:textfield;
 }
 
+input {
+  border-radius: 0;
+}
+
+input[type="search"] {
+  -webkit-appearance: none;
+}
+
 input[type=text]::-ms-clear {  display: none; width : 0; height: 0; }
 input[type=text]::-ms-reveal {  display: none; width : 0; height: 0; }
 input[type="search"]::-webkit-search-decoration,
