--- a/src/templates/header/mobile/mobile.scss
+++ b/src/templates/header/mobile/mobile.scss
@@ -172,7 +172,7 @@
   padding-left: 8px;
   box-sizing: border-box;
   background-color: $white;
-  overflow-y: auto;
+  overflow: hidden auto;
 }
 
 .mobile-menu__info {
