--- a/src/templates/modal/modal.scss
+++ b/src/templates/modal/modal.scss
@@ -14,7 +14,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  width: 420px;
+  width: 100%;
+  max-width: 420px;
   padding: 30px;
   border-radius: 8px;
   border: 2px solid #e7e7e7;
@@ -50,7 +51,6 @@
 
 .modal__reviews {
   .modal__content {
-    width: calc(100% - 16px);
     max-width: 750px;
   }
   .textarea {
@@ -114,6 +114,9 @@
 }
 
 @media (max-width: 767.98px) {
+  .modal__content {
+    width: calc(100% - 16px);
+  }
   .modal__reviews_top {
     justify-content: center;
     flex-wrap: wrap;
